--- a/azure_sdk_storage_table/Cargo.toml
+++ b/azure_sdk_storage_table/Cargo.toml
@@ -26,6 +26,7 @@ serde                  = "1.0"
 serde_derive           = "1.0"
 serde_json             = "1.0"
 futures                = "0.3"
+url                    = "2.1"
 
 [dev-dependencies]
 tokio                  = { version = "0.2", features = ["macros"] }
